--- a/sass/layouts/_navigation.scss
+++ b/sass/layouts/_navigation.scss
@@ -22,7 +22,7 @@
         font-style: normal;
         font-weight: 500;
         font-size: 20px;
-        line-height: 1.5em;
+        line-height: 100%;
         letter-spacing: 0.05em;
         color: var(--text_color);
     }
