--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,19 +1,85 @@
-.header_section {
+.header {
     background: linear-gradient(90deg, #EDF7FE 71.35%, rgba(237, 247, 254, 0.615955) 87.4%, rgba(237, 247, 254, 0.290962) 96.88%, rgba(237, 247, 254, 0) 100%);
     filter: drop-shadow(0px 4px 4px rgba(21, 16, 15, 0.25));
+
+
+    &_section {
+        padding-top: 32px;
+        width: 1728px;
+        height: 848px;
+    }
+
+    &_image {
+        position: absolute;
+        top: 0;
+        left: 0;
+        min-width: auto;
+    }
+
+    &_balloon {
+        position: absolute;
+        top: 32px;
+        left: 1368px;
+        width: 280px;
+        height: 282px;
+        background-image: url("/images/index/png/contacts\ balloon.png");
+    }
+
+    // &_contacts {}
+
+    &_contacts-item {
+        font-family: var(--title_font);
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 100%;
+
+        &_:last-child {
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 150%;
+        }
+    }
+
+    &_contacts-second-number {
+        padding: 28px 0 4px 0;
+    }
+
+    &_contacts-svg {
+        padding: 24px 0 18px 0;
+    }
+
+    &_logo {
+        position: absolute;
+        top: 260px;
+        left: 1148px;
+        width: 208px;
+        z-index: 1;
+    }
+
+    &_title-box {
+        position: absolute;
+        top: 372px;
+        left: 980px;
+        padding: 35px 46px;
+        width: 668px;
+        height: 216px;
+        background: linear-gradient(95.97deg, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 100%);
+        backdrop-filter: blur(7.5px);
+        border-radius: 40px;
+        outline: 1px solid tomato;
+    }
+
+    &_title {
+        font-family: var(--header_font);
+        font-weight: 400;
+        font-size: 56px;
+        line-height: 150%;
+        letter-spacing: 0.1em;
+        text-transform: uppercase;
+        color: #563831;
+    }
+
+    &_title-span {
+        font-size: 44px;
+    }
 }
-
-.header_box {
-    padding-top: 32px;
-}
-
-.header_image {
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-width: auto;
-}
-
-// .header_contacts {}
-
-// .header_contacts-item {}
