--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -3,7 +3,7 @@
     // min-width: 320px;
     margin: 0 auto;
     align-items: center;
-    outline: 2px solid tomato;
+    // outline: 2px solid tomato;
 
     @media screen and (min-width: 390px) {
         width: 390px;
