--- a/css/main.css
+++ b/css/main.css
@@ -52,14 +52,7 @@ body {
 }
 
 .container {
-  width: 100%;
-  margin: 0 auto;
-  align-items: center;
-}
-@media screen and (min-width: 390px) {
-  .container {
-    width: 390px;
-  }
+  width: 390px;
 }
 @media screen and (min-width: 834px) {
   .container {
@@ -78,14 +71,8 @@ body {
 }
 
 .section {
-  width: 100%;
-  padding: 0 20px;
-}
-@media screen and (min-width: 390px) {
-  .section {
-    width: 390px;
-    padding: 0 28px;
-  }
+  width: 390px;
+  padding: 0 28px;
 }
 @media screen and (min-width: 834px) {
   .section {
@@ -141,49 +128,119 @@ body {
 }
 
 .header_section {
-  height: 848px;
+  height: 396px;
   background: linear-gradient(90deg, #EDF7FE 71.35%, rgba(237, 247, 254, 0.615955) 87.4%, rgba(237, 247, 254, 0.290962) 96.88%, rgba(237, 247, 254, 0) 100%);
   filter: drop-shadow(0px 4px 4px rgba(21, 16, 15, 0.25));
+}
+@media screen and (min-width: 834px) {
+  .header_section {
+    height: 848px;
+  }
 }
 .header_image {
   position: absolute;
   top: 0;
   left: 0;
-  width: 1248px;
-  height: 848px;
-  background-image: url("/images/index/jpg/hero image.jpg");
+  width: 390px;
+  height: 396px;
+  background-image: url("/images/index/jpg/header/hero image_mobile.jpg");
 }
-.header_balloon {
-  position: absolute;
-  top: 32px;
-  left: 1368px;
-  width: 280px;
-  height: 282px;
-  background-image: url("/images/index/png/contacts balloon.png");
+@media screen and (min-width: 834px) {
+  .header_image {
+    width: 834px;
+    height: 848px;
+    background-image: url("/images/index/jpg/header/hero image_tablet.jpg");
+  }
 }
-.header_contacts-item {
-  font-family: var(--title_font);
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 100%;
+@media screen and (min-width: 1440px) {
+  .header_image {
+    width: 1030px;
+    background-image: url("/images/index/jpg/header/hero image_desktop.jpg");
+  }
 }
-.header_contacts-first-number {
-  color: var(--title-color);
+@media screen and (min-width: 1728px) {
+  .header_image {
+    width: 1248px;
+    background-image: url("/images/index/jpg/header/hero image_macbook.jpg");
+  }
 }
-.header_contacts-second-number {
-  padding: 28px 0 4px 0;
+@media screen and (min-width: 834px) {
+  .header_balloon {
+    position: absolute;
+    top: 32px;
+    left: 502px;
+    width: 196px;
+    height: 200px;
+    background-image: url("/images/index/png/header/balloon_tablet.png");
+  }
+}
+@media screen and (min-width: 1440px) {
+  .header_balloon {
+    left: 1074px;
+    width: 280px;
+    height: 282px;
+    background-image: url("/images/index/png/header/balloon_desktop.png");
+  }
+}
+@media screen and (min-width: 1728px) {
+  .header_balloon {
+    left: 1368px;
+    width: 280px;
+    height: 282px;
+  }
+}
+@media screen and (min-width: 834px) {
+  .header_contacts-item {
+    font-family: var(--title_font);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 100%;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .header_contacts-item {
+    font-size: 20px;
+  }
 }
 .header_contacts-svg {
-  padding: 24px 72px 18px 72px;
+  margin-top: 16px;
+  margin-bottom: 12px;
+  width: 44px;
+  height: 44px;
+  fill: var(--first-accent_color);
 }
 .header_contacts-svg:hover,
 .header_contacts-svg :focus {
   width: 100px;
 }
+@media screen and (min-width: 1440px) {
+  .header_contacts-svg {
+    margin-top: 24px;
+    margin-bottom: 18px;
+    width: 52px;
+    height: 52px;
+  }
+}
+.header_contacts-number--first {
+  color: var(--title-color);
+}
+.header_contacts-number--second {
+  padding: 16px 0 4px 0;
+}
+@media screen and (min-width: 1728px) {
+  .header_contacts-number--second {
+    padding: 28px 0 4px 0;
+  }
+}
 .header_contacts-social {
   font-weight: 400;
-  font-size: 16px;
+  font-size: 12px;
   line-height: 150%;
+}
+@media screen and (min-width: 1440px) {
+  .header_contacts-social {
+    font-size: 16px;
+  }
 }
 .header_logo {
   position: absolute;
@@ -248,6 +305,7 @@ body {
   background-color: var(--first-accent_color);
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
 }
+
 .navigation {
   position: absolute;
   top: 32px;
