--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,13 +1,13 @@
 .container {
-    width: 100%;
-    // min-width: 320px;
-    margin: 0 auto;
-    align-items: center;
+    width: 390px;
+    // width: 100%;
+    // margin: 0 auto;
+    // align-items: center;
     // outline: 2px solid tomato;
 
-    @media screen and (min-width: 390px) {
-        width: 390px;
-    }
+    // @media screen and (min-width: 390px) {
+    //     width: 390px;
+    // }
 
     @media screen and (min-width: 834px) {
         width: 834px;
