--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,7 +1,7 @@
 .container {
     width: 390px;
     // width: 100%;
-    // margin: 0 auto;
+    margin: 0 auto;
     // align-items: center;
     // outline: 2px solid tomato;
 
