--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -19,22 +19,51 @@
         left: 0;
         width: 390px;
         height: 396px;
-        background-image: url("/images/index/jpg/header/hero\ image_mobile.jpg");
+        background-image: url("/images/index/jpg/hero_mob.jpg");
+        background-size: cover;
+
+        @media (min-device-pixel-ratio: 2) and (min-width: 834px),
+        (-webkit-min-device-pixel-ratio: 2) and (min-width: 834px),
+        (min-resolution: 192dpi) and (min-width: 834px),
+        (min-resolution: 2dppx) and (min-width: 834px) {
+            background-image: url("/images/index/jpg/hero_mob@2x.jpg");
+        }
 
         @media screen and (min-width: 834px) {
             width: 834px;
             height: 848px;
-            background-image: url("/images/index/jpg/header/hero\ image_tablet.jpg");
+            background-image: url("/images/index/jpg/hero_tab.jpg");
+        }
+
+        @media (min-device-pixel-ratio: 2) and (min-width: 834px),
+        (-webkit-min-device-pixel-ratio: 2) and (min-width: 834px),
+        (min-resolution: 192dpi) and (min-width: 834px),
+        (min-resolution: 2dppx) and (min-width: 834px) {
+            background-image: url("/images/index/jpg/hero_tab@2x.jpg");
         }
 
         @media screen and (min-width: 1440px) {
             width: 1030px;
-            background-image: url("/images/index/jpg/header/hero\ image_desktop.jpg");
+            background-image: url("/images/index/jpg/hero_desk.jpg");
+        }
+
+        @media (min-device-pixel-ratio: 2) and (min-width: 1440px),
+        (-webkit-min-device-pixel-ratio: 2) and (min-width: 1440px),
+        (min-resolution: 192dpi) and (min-width: 1440px),
+        (min-resolution: 2dppx) and (min-width: 1440px) {
+            background-image: url("/images/index/jpg/hero_desk@2x.jpg");
         }
 
         @media screen and (min-width: 1728px) {
             width: 1248px;
-            background-image: url("/images/index/jpg/header/hero\ image_macbook.jpg");
+            background-image: url("/images/index/jpg/hero_mac.jpg");
+        }
+
+        @media (min-device-pixel-ratio: 2) and (min-width: 1728px),
+        (-webkit-min-device-pixel-ratio: 2) and (min-width: 1728px),
+        (min-resolution: 192dpi) and (min-width: 1728px),
+        (min-resolution: 2dppx) and (min-width: 1728px) {
+            background-image: url("/images/index/jpg/hero_mac@2x.jpg");
         }
     }
 
@@ -45,14 +74,20 @@
             left: 502px;
             width: 196px;
             height: 200px;
-            background-image: url("/images/index/png/header/balloon_tablet.png");
         }
 
         @media screen and (min-width: 1440px) {
             left: 1074px;
             width: 280px;
             height: 282px;
-            background-image: url("/images/index/png/header/balloon_desktop.png");
+            background-image: url("/images/index/png/balloon_mac_desk.png");
+        }
+
+        @media (min-device-pixel-ratio: 2) and (min-width: 1440px),
+        (-webkit-min-device-pixel-ratio: 2) and (min-width: 1440px),
+        (min-resolution: 192dpi) and (min-width: 1440px),
+        (min-resolution: 2dppx) and (min-width: 1440px) {
+            background-image: url("/images/index/png/balloon_mac_desk@2x.png");
         }
 
         @media screen and (min-width: 1728px) {
@@ -99,6 +134,7 @@
             margin-bottom: 18px;
             width: 52px;
             height: 52px;
+            background-image: url("/images/index/png/logo_tab.png");
         }
 
         @media screen and (min-width: 1728px) {}
@@ -136,44 +172,91 @@
 
     &_logo {
         position: absolute;
-        top: 260px;
-        left: 1148px;
-        width: 208px;
+        top: 176px;
+        left: 262px;
+        width: 100px;
         z-index: 1;
 
-        @media screen and (min-width: 834px) {}
+        @media screen and (min-width: 834px) {
+            top: 444px;
+            left: 634px;
+            width: 140px;
+        }
+
+        @media screen and (min-width: 1440px) {
+            top: 300px;
+            left: 956px;
+            width: 160px;
+        }
+
+        @media screen and (min-width: 1728px) {
+            top: 260px;
+            left: 1148px;
+            width: 208px;
+        }
+    }
+
+    &_title-box {
+        position: absolute;
+        top: 212px;
+        left: 28px;
+        width: 334px;
+        height: 96px;
+        padding: 12px 21px;
+        background: linear-gradient(95.97deg, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 100%);
+        backdrop-filter: blur(7.5px);
+        border-radius: 20px;
+        outline: 1px solid tomato;
+
+        @media screen and (min-width: 834px) {
+            top: 444px;
+            left: 83px;
+            width: 668px;
+            height: 216px;
+            padding: 35px 42px;
+            border-radius: 20px;
+        }
+
+        @media screen and (min-width: 1440px) {
+            top: 372px;
+            left: 686px;
+        }
+
+        @media screen and (min-width: 1728px) {
+            left: 980px;
+            padding: 36px 40px 0px 44px;
+        }
+    }
+
+    &_title {
+        font-family: var(--header_font);
+        font-weight: 400;
+        font-size: 28px;
+        line-height: 130%;
+        letter-spacing: 0.1em;
+        text-transform: uppercase;
+        color: #563831;
+
+        @media screen and (min-width: 834px) {
+            font-size: 56px;
+        }
 
         @media screen and (min-width: 1440px) {}
 
         @media screen and (min-width: 1728px) {}
     }
 
-    &_title-box {
-        position: absolute;
-        top: 372px;
-        left: 980px;
-        padding: 35px 42px;
-        width: 668px;
-        height: 216px;
-        background: linear-gradient(95.97deg, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 100%);
-        backdrop-filter: blur(7.5px);
-        border-radius: 40px;
-        // outline: 1px solid tomato;
-    }
-
-    &_title {
-        font-family: var(--header_font);
-        font-weight: 400;
-        font-size: 56px;
-        line-height: 130%;
-        letter-spacing: 0.1em;
-        text-transform: uppercase;
-        color: #563831;
-    }
-
     &_title-text {
-        font-size: 44px;
+        font-size: 22px;
         letter-spacing: 0.1em;
+
+        @media screen and (min-width: 834px) {
+            font-size: 44px;
+        }
+
+        @media screen and (min-width: 1440px) {}
+
+        @media screen and (min-width: 1728px) {}
     }
 
     &_delivery {
